# WallBlank

./: .gitignore  README.md
ArtiaScreenSaver/: ArtiaScreenSaverConfigController.swift  ArtiaScreenSaverView.swift
Shared/: WidgetDataProvider.swift
WallpaperHub/: AppDelegate.swift  AuthManager.swift  Constants.swift  DisplayManager.swift  DisplayWallpaperInstance.swift  GalleryItem.swift  GalleryManager.swift  HardwarePerformanceAdvisor.swift  LocalHTTPFileServer.swift  MacOSDesktopClickRevealAdvice.swift  MainHubWindow.swift  MusicWallpaperFeature.swift  PerformanceMonitor.swift  PkgReaderSimple.swift  PreviewWindow.swift  Renderer.swift  ScheduleManager.swift  SettingsView.swift  SharedSettings.swift  SteamConfig.swift  SteamManager.swift  UserProfile.swift  WallpaperEngine.swift  WallpaperEngineWebResolver.swift  WallpaperEngineWebUserProperties.swift  WallpaperGalleryView.swift  WallpaperHubApp.swift  WallpaperLibrary.swift
WallpaperHub/Accessibility/: AccessibilityHelpers.swift
WallpaperHub/Application/: ApplicationUnsupportedView.swift  ApplicationWallpaperRuntime.swift
WallpaperHub/ArtiaMenubar/: ArtiaMenubarApp.swift  ArtiaMenubarContentView.swift
WallpaperHub/ArtiaMenubarTests/: ArtiaMenubarTests.swift
WallpaperHub/ArtiaMenubarUITests/: ArtiaMenubarUITests.swift
WallpaperHub/Audio/: AudioFFTAnalyzer.swift  AudioUniformBridge.swift  SystemAudioCapture.swift
WallpaperHub/Bridge/: RustBridge.swift  (+3 more)
WallpaperHubWidget/: WallpaperHubWidget.swift  WallpaperWidgetViews.swift
rust-core/: Cargo.toml
rust-core/artia-cli/: Cargo.toml
rust-core/artia-cli/src/: main.rs  url_builder.rs
rust-core/artia-cli/tests/: integration_test.rs
rust-core/artia-core/: Cargo.toml
rust-core/artia-core/src/: brush_mask.rs  lib.rs  magnetic_select.rs  mask_paint.rs  pkg_writer.rs  platform.rs
rust-core/artia-core/src/event_bus/: mod.rs
rust-core/artia-core/src/models/: collection.rs  gallery.rs  mod.rs  schedule.rs  user_profile.rs  wallpaper.rs
rust-core/artia-core/src/pkg_reader/: dds.rs  mod.rs
rust-core/artia-ffi/: Cargo.toml  build.rs
rust-core/artia-ffi/src/: audio_ffi.rs  bone_ffi.rs  brush_mask_ffi.rs  conversions.rs  firebase_ffi.rs  lib.rs  light_ffi.rs  magnetic_select_ffi.rs  mask_paint_ffi.rs  parallax_ffi.rs  particle_ffi.rs  spanning_ffi.rs  warp_ffi.rs  wgpu_ffi.rs
rust-core/artia-firebase/: Cargo.toml
rust-core/artia-firebase/src/: auth.rs  cache.rs  config.rs  error.rs  firestore.rs  http.rs  lib.rs  messaging.rs  retry.rs  storage.rs
rust-core/artia-platform-linux/: Cargo.toml
rust-core/artia-platform-linux/src/: lib.rs
rust-core/artia-platform-macos/: Cargo.toml
rust-core/artia-platform-macos/src/: lib.rs
rust-core/artia-platform-windows/: Cargo.toml
rust-core/artia-platform-windows/src/: lib.rs
rust-core/artia-wgpu/: Cargo.toml
rust-core/artia-wgpu/src/: audio.rs  compositor.rs  engine.rs  iosurface.rs  layer.rs  lib.rs  light.rs  parallax.rs  spanning.rs  types.rs
rust-core/artia-wgpu/src/animation/: mod.rs  preset.rs
rust-core/artia-wgpu/src/bone/: bone.rs  mod.rs  pose.rs  skin.rs
rust-core/artia-wgpu/src/motion/: flow_field.rs  mod.rs
rust-core/artia-wgpu/src/particle/: compute.rs  emitter.rs  initializer.rs  mod.rs  operator.rs  particle.rs  render.rs  rng.rs  tests.rs
rust-core/artia-wgpu/src/warp/: handle.rs  mesh.rs  mod.rs  solve.rs  solve_tps.rs
website/: index.html  script.js  styles.css
(+206 files in other folders)
