[workspace]
members = [
    "artia-core",
    "artia-wgpu",
    "artia-firebase",
    "artia-platform-macos",
    "artia-platform-windows",
    "artia-platform-linux",
    "artia-ffi",
    "artia-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "24"
