[package]
name = "artia-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
walkdir = "2"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
