[package]
name = "artia-firebase"
version.workspace = true
edition.workspace = true

[dependencies]
artia-core = { path = "../artia-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
urlencoding = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-stream = "0.3"
sha2 = "0.10"
dirs = "5"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
